--- a/src/app/component/navigation/navbar/navbar.component.html
+++ b/src/app/component/navigation/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <!--navbar element-->
     <nav class="navbar" id="navbar">
         <li><a href="#">Medicare</a></li>
-        <li><a href="#">Shop</a></li>
+        <li><a routerLink="/shop">Shop</a></li>
         <li><a href="#">Admin</a></li>
         <li><a href="#">Checkout</a></li>
         <li><a routerLink="/login">Login</a></li>
