feature. Added category service and display category in product view

--- a/src/app/component/view-products/view-products.component.css
+++ b/src/app/component/view-products/view-products.component.css
@@ -1,9 +1,5 @@
 
 
-
-
-
-
 .flex-container{
     display: inline-flex;
 }
@@ -12,4 +8,13 @@
     order:3;
     padding:25pt;
     border: 1px solid black;
+}
+
+.view-splitter{
+    display: inline-flex;
+}
+
+li {
+    display: flex;
+    flex-direction: column;
 }
