feature. Added bill summary feature

--- a/src/app/component/navigation/navbar/navbar.component.html
+++ b/src/app/component/navigation/navbar/navbar.component.html
@@ -6,7 +6,7 @@
         <li><a href="#">Medicare</a></li>
         <li><a routerLink="/shop">Shop</a></li>
         <li><a href="#">Admin</a></li>
-        <li><a href="#">Checkout</a></li>
+        <li><a routerLink="/cart">Cart</a></li>
         <li><a routerLink="/login">Login</a></li>
     </nav>
 
