Feature. Implemented checkout button from cart to chechout the customer and cleared the cart

--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -33,6 +33,6 @@
         <span>Total: {{total | currency}}</span>
     </table>
 
-    <button>Checkout</button>
+    <button (click)="billCheckout()">Checkout</button>
 
 </div>
