feature. Added admin page

--- a/src/app/component/navigation/navbar/navbar.component.html
+++ b/src/app/component/navigation/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     <nav class="navbar" id="navbar">
         <li><a href="#">Medicare</a></li>
         <li><a routerLink="/shop">Shop</a></li>
-        <li><a href="#">Admin</a></li>
+        <li><a routerLink="/admin">Admin</a></li>
         <li><a routerLink="/cart">Cart</a></li>
         <li><a routerLink="/login">Login</a></li>
     </nav>
