Feature. Added user edit form

--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -2,7 +2,7 @@
     <h1 class="title" id="title">Administrator Page</h1>
     
     <ul class="list" id="list">
-        <li><a href="#">Manage Users</a></li>
-        <li><a href="#">Manage Products</a></li>
+        <li><a routerLink="/admin/manage-users">Manage Users</a></li>
+        <li><a routerLink="#">Manage Products</a></li>
     </ul>
 </div>
