Feature. Implemented product management page.

--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -3,6 +3,6 @@
     
     <ul class="list" id="list">
         <li><a routerLink="/admin/manage-users">Manage Users</a></li>
-        <li><a routerLink="#">Manage Products</a></li>
+        <li><a routerLink="/admin/manage-products">Manage Products</a></li>
     </ul>
 </div>
