--- a/src/app/component/admin/manage-product/manage-product.component.html
+++ b/src/app/component/admin/manage-product/manage-product.component.html
@@ -26,7 +26,7 @@
                 <td>{{product.price | currency}}</td>
                 <td>{{product.qty}}</td>
                 <td><img src={{product.imgUrl}} alt=""></td>
-                <td><button class="prod-edit-btn" id="prod-edit-btn">Edit</button></td>
+                <td><button class="prod-edit-btn" id="prod-edit-btn" (click)="navigateProductEdit(product.id)">Edit</button></td>
                 <td><button class="prod-delete-btn" id="prod-delete-btn" (click)="deleteProductById(product.id)">Delete</button></td>
             </tr>
         </table>
