--- a/src/app/component/admin/manage-product/manage-product.component.html
+++ b/src/app/component/admin/manage-product/manage-product.component.html
@@ -7,6 +7,7 @@
 
     <!-- List all products -->
     <div class="list-prod-div" id="list-prod-div">
+        <button class="button add-user-btn" id="add-user-btn" (click)="navigateProductEdit()">Add User</button>
         <table class="prod-table" id="prod-table">
             <tr class="prod-header-row">
                 <th>ID</th>
