Bug. Fix issue with displaying logoff and login when the user has logged in

--- a/src/app/component/logoff/logoff/logoff.component.html
+++ b/src/app/component/logoff/logoff/logoff.component.html
@@ -1,1 +1,6 @@
-<p>logoff works!</p>
+<!-- Logoff Component -->
+<div class="logoff-div" id="logoff-div">
+
+    <p class="logoff-title" id="logoff-title">You have sucessfully logoff</p>
+</div>
+
