--- a/src/app/component/navigation/navbar/navbar.component.html
+++ b/src/app/component/navigation/navbar/navbar.component.html
@@ -7,7 +7,8 @@
         <li><a routerLink="/shop">Shop</a></li>
         <li><a routerLink="/admin">Admin</a></li>
         <li><a routerLink="/cart">Cart</a></li>
-        <li><a routerLink="/login">Login</a></li>
+        <li *ngIf="!isloggedIn()"><a routerLink="/login" >Login</a></li>
+        <li *ngIf="isloggedIn()"><a routerLink="/logoff" >LogOff</a></li>
     </nav>
 
 </div>
