Feature: Connected product service to backend RESTful service

--- a/src/app/component/admin/manage-product/manage-product.component.html
+++ b/src/app/component/admin/manage-product/manage-product.component.html
@@ -3,7 +3,7 @@
     <p class="manage-prod-title" id="manage-prod-title">Manage Products</p>
 
     <!-- Empty Product List display -->
-    <p class="empty-prod-list" id="empty-prod-list" *ngIf="products.length === 0">Product List is Empty</p>
+    <!-- <p class="empty-prod-list" id="empty-prod-list" *ngIf="products.length === 0">Product List is Empty</p> -->
 
     <!-- List all products -->
     <div class="list-prod-div" id="list-prod-div">
