Featuer. Connected view product item to the product REST service

--- a/src/app/component/admin/manage-product/edit-product/edit-product.component.html
+++ b/src/app/component/admin/manage-product/edit-product/edit-product.component.html
@@ -7,7 +7,7 @@
     <!-- Form for product -->
     <form class="prod-form" id="prod-form" (ngSubmit)="editProduct(prodForm)" #prodForm="ngForm">
         <!-- Prod id -->
-        <label for="prod-id-lb" class="id-lb" id="id-lb">ID {{product.id}}</label>
+        <label for="prod-id-lb" class="id-lb" id="id-lb">ID {{product.pid}}</label>
         <br>
 
         <!-- Prod name -->
