--- a/src/app/component/admin/manage-product/manage-product.component.html
+++ b/src/app/component/admin/manage-product/manage-product.component.html
@@ -21,14 +21,14 @@
             </tr>
 
             <tr class="prod-data-row" id="prod-data-row" *ngFor = "let product of products">
-                <td>{{product.id}}</td>
+                <td>{{product.pid}}</td>
                 <td>{{product.name}}</td>
                 <td>{{product.category.name}}</td>
                 <td>{{product.price | currency}}</td>
                 <td>{{product.qty}}</td>
                 <td><img src={{product.imgUrl}} alt=""></td>
-                <td><button class="prod-edit-btn" id="prod-edit-btn" (click)="navigateProductEdit(product.id)">Edit</button></td>
-                <td><button class="prod-delete-btn" id="prod-delete-btn" (click)="deleteProductById(product.id)">Delete</button></td>
+                <td><button class="prod-edit-btn" id="prod-edit-btn" (click)="navigateProductEdit(product.pid)">Edit</button></td>
+                <td><button class="prod-delete-btn" id="prod-delete-btn" (click)="deleteProductById(product.pid)">Delete</button></td>
             </tr>
         </table>
     </div>
