Feature. Connected product management to product service

--- a/src/app/component/admin/manage-product/edit-product/edit-product.component.html
+++ b/src/app/component/admin/manage-product/edit-product/edit-product.component.html
@@ -17,8 +17,8 @@
 
         <!-- Prod Category -->
         <label for="prod-category" class="prod-category-lb" id="prod-category-lb">Category</label>
-        <select name="category" id="category-select" class="category-select" [(ngModel)]="product.category" required>
-            <option *ngFor="let category of categories" value="category.name">{{category.name}}</option>
+        <select name="category" id="category-select" class="category-select" [(ngModel)]="categoryId" required>
+            <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
         </select>
         <br>
 
