Feature. Added upload file button to product management. File upload has not been implemented yet

--- a/src/app/component/admin/manage-product/edit-product/edit-product.component.html
+++ b/src/app/component/admin/manage-product/edit-product/edit-product.component.html
@@ -33,6 +33,10 @@
         <input name="qty" class="prod-qty-input" id="prod-qty-input" [ngModel]="product.qty" required>
         <br>
 
+        <!-- File upload -->
+        <label for="file">Upload Image</label>
+        <input type="file" class="image-upload" id="image-upload" (change)="onFileSelected($event)">
+
         <!-- Submit button -->
         <button class="prod-submit-btn" id="prod-submit-btn">Update</button>
 
