Feature. Added feature to update upload product image

--- a/src/app/component/view-products/product-item/product-item/product-item.component.html
+++ b/src/app/component/view-products/product-item/product-item/product-item.component.html
@@ -1,5 +1,5 @@
 <div class="product-item" id="product-item" *ngIf="product != null">
-    <div class="prod-img" id="prod-img"><a [routerLink]="['/shop/product',product.pid]"><img [src]="product.imgUrl" [alt]="product.name"> </a></div>
+    <div class="prod-img" id="prod-img"><a [routerLink]="['/shop/product',product.pid]"><img [src]="getImage(product.pid)" [alt]="product.name"> </a></div>
     <div>id {{product.pid}}</div>
     <div class="prod-title" id="prod-title">{{ product.name }}</div>
     <div class="prod-price" id="prod-price">{{ product.price | currency}}</div>
