Feature: Implemented image service and retrive and display the images on view product componet

--- a/src/app/component/view-products/product-item/product-item/product-item.component.html
+++ b/src/app/component/view-products/product-item/product-item/product-item.component.html
@@ -1,10 +1,12 @@
 <div class="product-item" id="product-item" *ngIf="product != null">
-    <div class="prod-img" id="prod-img"><a [routerLink]="['/shop/product',product.pid]"><img [src]="getImage(product.pid)" [alt]="product.name"> </a></div>
+  
+    <div class="prod-img" id="prod-img"><a [routerLink]="['/shop/product',product.pid]"><img [src]="image" [alt]="product.name"></a></div>
     <div>id {{product.pid}}</div>
     <div class="prod-title" id="prod-title">{{ product.name }}</div>
     <div class="prod-price" id="prod-price">{{ product.price | currency}}</div>
     <button class="prod-cart-btn" id="prod-cart-btn" (click)="addToCart()"> Add </button>
     <button class="prod-buy-btbn" id="product-buy-btn" (click)="goToCart()">Buy</button>
+
 </div>
 
  <p class="bad-msg" id="bad-msg" *ngIf="product == null">Product does not exist!</p>
