--- a/src/app/component/admin/manage-product/manage-product.component.html
+++ b/src/app/component/admin/manage-product/manage-product.component.html
@@ -11,24 +11,27 @@
         <table class="prod-table" id="prod-table">
             <tr class="prod-header-row">
                 <th>ID</th>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Price</th>
-                <th>Quantity</th>
                 <th> Image</th>
+                <th>Name</th>
+                <th>Brand</th>
+                <th>Category</th>
+                <th>Quantity</th>
+                <th>Price</th>
                 <th> Edit</th>
-                <th> Delete</th>
+                <th> Disable</th>
             </tr>
 
             <tr class="prod-data-row" id="prod-data-row" *ngFor = "let product of products">
                 <td>{{product.pid}}</td>
+                <td><img [src]="findImage(product.pid)" style="width: 80px;"></td>
                 <td>{{product.name}}</td>
+                <td>{{product.brand}}</td>
                 <td>{{product.category.name}}</td>
-                <td>{{product.price | currency}}</td>
                 <td>{{product.qty}}</td>
-                <td><img src={{product.imgUrl}} alt=""></td>
+                <td>{{product.price | currency}}</td>
                 <td><button class="prod-edit-btn" id="prod-edit-btn" (click)="navigateProductEdit(product.pid)">Edit</button></td>
-                <td><button class="prod-delete-btn" id="prod-delete-btn" (click)="deleteProductById(product.pid)">Delete</button></td>
+                <td *ngIf="product.active"><button class="prod-delete-btn" id="prod-delete-btn" (click)="disableProduct(product)" >Disable</button></td>
+                <td *ngIf="!product.active"><button class="prod-delete-btn" id="prod-delete-btn" (click)="disableProduct(product)">Enable</button></td>
             </tr>
         </table>
     </div>
