--- a/src/app/component/admin/manage-product/manage-product.component.html
+++ b/src/app/component/admin/manage-product/manage-product.component.html
@@ -9,30 +9,33 @@
     <div class="list-prod-div" id="list-prod-div">
         <button class="button add-user-btn" id="add-user-btn" (click)="navigateProductEdit()">ADD</button>
         <table class="prod-table" id="prod-table">
-            <tr class="prod-header-row">
-                <th>ID</th>
-                <th> Image</th>
-                <th>Name</th>
-                <th>Brand</th>
-                <th>Category</th>
-                <th>Quantity</th>
-                <th>Price</th>
-                <th> Edit</th>
-                <th> Disable</th>
-            </tr>
+            <thead>                 <tr class="prod-header-row">
+                     <th>ID</th>
+                     <th> Image</th>
+                     <th>Name</th>
+                     <th>Brand</th>
+                     <th>Category</th>
+                     <th>Quantity</th>
+                     <th>Price</th>
+                     <th> Edit</th>
+                     <th> Disable</th>
+                 </tr>
+            </thead>
 
-            <tr class="prod-data-row" id="prod-data-row" *ngFor = "let product of products">
-                <td>{{product.pid}}</td>
-                <td><img [src]="findImage(product.pid)" style="width: 80px;"></td>
-                <td>{{product.name}}</td>
-                <td>{{product.brand}}</td>
-                <td>{{product.category.name}}</td>
-                <td>{{product.qty}}</td>
-                <td>{{product.price | currency}}</td>
-                <td><button class="prod-edit-btn" id="prod-edit-btn" (click)="navigateProductEdit(product.pid)">Edit</button></td>
-                <td *ngIf="product.active"><button class="prod-delete-btn" id="prod-delete-btn" (click)="disableProduct(product)" >Disable</button></td>
-                <td *ngIf="!product.active"><button class="prod-delete-btn" id="prod-delete-btn" (click)="disableProduct(product)">Enable</button></td>
-            </tr>
+            <tbody>
+                <tr class="prod-data-row" id="prod-data-row" *ngFor = "let product of products">
+                    <td>{{product.pid}}</td>
+                    <td><img [src]="findImage(product.pid)" style="width: 80px;"></td>
+                    <td>{{product.name}}</td>
+                    <td>{{product.brand}}</td>
+                    <td>{{product.category.name}}</td>
+                    <td>{{product.qty}}</td>
+                    <td>{{product.price | currency}}</td>
+                    <td><button class="prod-edit-btn" id="prod-edit-btn" (click)="navigateProductEdit(product.pid)">Edit</button></td>
+                    <td *ngIf="product.active"><button class="prod-delete-btn" id="prod-delete-btn" (click)="disableProduct(product)" >Disable</button></td>
+                    <td *ngIf="!product.active"><button class="prod-delete-btn" id="prod-delete-btn" (click)="disableProduct(product)">Enable</button></td>
+                </tr>
+            </tbody>
         </table>
     </div>
  </div>
