--- a/src/app/component/admin/manage-product/manage-product.component.html
+++ b/src/app/component/admin/manage-product/manage-product.component.html
@@ -8,6 +8,7 @@
     <!-- List all products -->
     <div class="list-prod-div" id="list-prod-div">
         <button class="button add-user-btn" id="add-user-btn" (click)="navigateProductEdit()">ADD</button>
+        <input type="text" class="search-box" id="search-box" placeholder="Enter product name" (keyup.enter)="searchTerm=search.value" #search>
         <table class="prod-table" id="prod-table">
             <thead>                 <tr class="prod-header-row">
                      <th>ID</th>
@@ -23,7 +24,7 @@
             </thead>
 
             <tbody>
-                <tr class="prod-data-row" id="prod-data-row" *ngFor = "let product of products">
+                <tr class="prod-data-row" id="prod-data-row" *ngFor = "let product of products | category:'search':searchTerm">
                     <td>{{product.pid}}</td>
                     <td><img [src]="findImage(product.pid)" style="width: 80px;"></td>
                     <td>{{product.name}}</td>
