--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -5,6 +5,12 @@
     <!-- Page title -->
     <Label for="reg-title" class="reg-title" id="reg-title"><H1>Register New User</H1> </Label>
 
+    <!-- Registration success error message -->
+    <div class="reg-msg-div" id="reg-msg-div">
+        <p *ngIf="isRegister !== ''">{{registerMsg}}</p>
+        <p *ngIf="!isPassMatch">{{passMatchMsg}}</p>
+    </div>
+
     <!-- Registration form element -->
     <form (ngSubmit)="registerUser(userForm)" #userForm="ngForm">
         <label for="firstname">firstname</label>
@@ -28,7 +34,7 @@
         <br>
 
         <label for="">retype password</label>
-        <input type="password" name="retyPassword-input" id="retyPassowrd-input" ngModle required>
+        <input type="password" name="retyPassword-input" id="retyPassowrd-input" name="retyPassword"  ngModel required>
         <br>
 
         <button type="submit" class="btn-submit" id="btsumit">Register</button>
