--- a/src/app/component/cart/bill-summary/bill-summary.component.html
+++ b/src/app/component/cart/bill-summary/bill-summary.component.html
@@ -11,13 +11,13 @@
             <th>total</th>
         </tr>
 
-        <tr *ngFor="let item of cart.products">
+        <tr *ngFor="let item of cart; index of i">
             <td>{{item.id}}</td>
-            <td>{{item.name}}</td>
+            <!-- <td>{{item.name}}</td>
             <td>{{item.category}}</td>
             <td>{{item.qty}}</td>
             <td>{{item.price | currency}}</td>
-            <td>{{item.qty * item.price | currency}}</td>
+            <td>{{item.qty * item.price | currency}}</td> -->
         </tr>
     </table>
 
