--- a/src/app/component/cart/bill-summary/bill-summary.component.html
+++ b/src/app/component/cart/bill-summary/bill-summary.component.html
@@ -3,21 +3,25 @@
 
     <table>
         <tr>
+            <th>#id</th>
             <th>ProductID</th>
             <th>Name</th>
+            <th>Brand</th>
             <th>Category</th>
             <th>qty</th>
             <th>price</th>
             <th>total</th>
         </tr>
 
-        <tr *ngFor="let item of cart; index of i">
+        <tr *ngFor="let item of cart; index as i">
+            <td>{{i+1}}</td>
             <td>{{item.id}}</td>
-            <!-- <td>{{item.name}}</td>
-            <td>{{item.category}}</td>
-            <td>{{item.qty}}</td>
-            <td>{{item.price | currency}}</td>
-            <td>{{item.qty * item.price | currency}}</td> -->
+            <td>{{item.product.name}}</td>
+            <td>{{item.product.brand}}</td>
+            <td>{{item.product.category.name}}</td>
+            <td>{{item.quantity}}</td>
+            <td>{{item.product.price | currency}}</td>
+            <td>{{item.quantity * item.product.price | currency}}</td>
         </tr>
     </table>
 
