--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap');
