--- a/src/app/component/navigation/navbar/navbar.component.html
+++ b/src/app/component/navigation/navbar/navbar.component.html
@@ -2,13 +2,52 @@
 <div class="navbar-div" id="navbar-div">
 
     <!--navbar element-->
-    <nav class="navbar" id="navbar">
-        <li><a href="#">Medicare</a></li>
-        <li><a routerLink="/shop">Shop</a></li>
-        <li><a routerLink="/admin">Admin</a></li>
-        <li><a routerLink="/cart">Cart</a></li>
-        <li *ngIf="!isloggedIn()"><a routerLink="/login" >Login</a></li>
-        <li *ngIf="isloggedIn()"><a routerLink="/logoff" >LogOff</a></li>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light" id="navbar">
+        
+        <a href="#" class="navbar-brand mb-0 h1">
+            <img 
+                class="d-inline-block align-top rounded" src="/assets/img/page_logo.jpg" alt="company logo"
+                width="50" height="50"
+            >
+            Medicare
+        </a>
+
+
+        <button type="button" 
+                data-bs-toggle="collapse" 
+                data-bs-target="#navbarNav" 
+                class="navbar-toggler" 
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+                >
+                <span class="navbar-toggler-icon"></span>
+
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link active" routerLink="/shop">Shop</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/admin">Admin</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/cart">Cart</a>
+                </li>
+
+                <li class="nav-item" *ngIf="!isloggedIn()">
+                    <a class="nav-link" routerLink="/login" >Login</a>
+                </li>
+
+                <li class="nav-item" *ngIf="isloggedIn()">
+                    <a class="nav-link" routerLink="/logoff" >LogOff</a>
+                </li>
+            </ul>
+
+        </div>
     </nav>
 
 </div>
