--- a/src/app/component/navigation/footer/footer.component.html
+++ b/src/app/component/navigation/footer/footer.component.html
@@ -1,6 +1,8 @@
 <!-- footer component-->
-<div class="footer-div" id="footer-div">
-    <footer class="footer" id="footer">
-        <strong>© Copyright 2022 by Yussel Rosario</strong>
-    </footer>
+<div class="footer-div text-center text-lg-start bg-light text-mute mt-auto " id="footer-div">
+    <!-- Copyright -->
+    <div class="text-center p-4 mt-auto" style="background-color: rgba(0, 0, 0, 0.05);">
+        © 2021 Copyright: by Yussel Rosario
+    </div>
+    <!-- Copyright -->
 </div>
