--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,15 @@
 *{
     font-family: sans-serif;
 }
+
+.body-div{
+    position: relative;
+    min-height: 77vh;
+}
+
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;   
+}
