--- a/src/app/component/view-products/product-item/product-item/product-item.component.css
+++ b/src/app/component/view-products/product-item/product-item/product-item.component.css
@@ -4,3 +4,40 @@
     margin-right: auto;
     width: 50%;
 }
+
+.card{
+    max-width: 480px;
+    margin:auto;
+    text-align: center;
+    width: 200px;
+    
+}
+
+img{
+    width: 100px;
+    height: 200px;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+}
+
+.card:hover{
+    background-color: rgb(219, 219, 247);
+    filter:brightness(105%);
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: 5px 10px #2751b4;
+}
+
+button {
+    padding: 5px 15px;
+    font-size: 18px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    border-radius: 12px;
+    box-shadow: 0 9px #999;
+  }
