--- a/src/app/component/view-products/product-item/product-item/product-item.component.html
+++ b/src/app/component/view-products/product-item/product-item/product-item.component.html
@@ -1,12 +1,22 @@
-<div class="product-item" id="product-item" *ngIf="product != null">
-  
-    <div class="prod-img" id="prod-img"><a [routerLink]="['/shop/product',product.pid]"><img [src]="image" [alt]="product.name" style="width: 100px;"></a></div>
-    <div>id {{product.pid}}</div>
-    <div class="prod-title" id="prod-title">{{ product.name }}</div>
-    <div class="prod-price" id="prod-price">{{ product.price | currency}}</div>
-    <button class="prod-cart-btn" id="prod-cart-btn" (click)="addToCart()"> Add </button>
-    <button class="prod-buy-btbn" id="product-buy-btn" (click)="goToCart()">Buy</button>
-
+<div class="card shadow-sm h-100" >
+    
+    <div class="card-body ">
+        <div class="prod-img" id="prod-img"><a [routerLink]="['/shop/product',product.pid]"><img [src]="image" [alt]="product.name" ></a></div>
+        <hr>
+        <strong>{{product.name}}</strong>
+        <p class="cart-text text-muted">{{product.brand}}</p>
+        <p class="cart-text text-muted">{{product.category.name}}</p>
+        <strong > {{product.price | currency }}</strong>
+        
+        <div class="d-flex justify-content-between align-items-center">
+            
+            <div class="btn-group">
+                <button class="btn btn-primary prod-cart-btn" id="prod-cart-btn" (click)="addToCart()"> Add </button>
+                <button class="btn btn-success" id="product-buy-btn" (click)="goToCart()">Buy</button>
+            </div>
+            
+        </div>
+    </div>
 </div>
 
  <p class="bad-msg" id="bad-msg" *ngIf="product == null">Product does not exist!</p>
