--- a/src/app/component/view-products/view-products.component.html
+++ b/src/app/component/view-products/view-products.component.html
@@ -2,44 +2,81 @@
 <div class="view-product-div" id="view-product-div">
 
     <!-- Search bar -->
-    <div class="search-div" id="search-div">
-        <input type="text" class="search-bar" id="search-bar" name="search" placeholder ="Enter Product name" #search>
-        <button class="search-btn" id="search-btn" (click)="oper='search';value=search.value; setTitle(search.value)">Search</button>
+    <div class="search-div input-group mb-3" id="search-div">
+        <input type="text" class="search-bar form-control" id="search-bar" name="search" placeholder ="Enter Product name" #search>
+        <button class="search-btn btn btn-outline-primary" id="search-btn" (click)="oper='search';value=search.value; setTitle(search.value)">Search</button>
     </div>
 
-    <!-- Slider -->
-    <div class="slider-div" id="slider-div">
-        <img src="https://via.placeholder.com/450" alt="slider">
-    </div>
 
-    <!-- split product category and product view -->
-    <div class="view-splitter" id="view-splitter">
+
+
+    <!-- grid for category session and slider -->
+    <div class="row view-splitter text-center" id="view-splitter">
+
+
+        <!-- column category -->
+        <div class="col-md-3 col-lg-3">
             <!-- Category List -->
-            <div class="category-list" id="category-list" *ngFor="let category of categories">
+            <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;">
                 
-                <ul> 
-                    <li><button (click)="oper='category';value=category.name; setTitle(category.name)">{{category.name}}</button></li>
+                <!-- Side bar title -->
+                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                    <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+                    <span class="fs-4">Categories</span>
+                </a>
+    
+                <hr>
+    
+    
+                <ul class="nav nav-pills flex-column mb-auto" *ngFor="let category of categories">
                     
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" (click)="oper='category';value=category.name; setTitle(category.name)">
+                        <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
+                        {{category.name}}
+                        </a>
+                    </li>
                 </ul>
-                
             </div>
+        </div>
+
+        <div class="col-md-1 spacer-div"></div>
+
+        <!--Product List-->
+            <!-- split product category and product view -->
+        <div class="col-md-8 col-lg-8 prod-div text-center" id="prod-div">
         
+            <h1 class="product-view-title" id="product-view-title">
+                {{pageTitle}}
+            </h1>
+
+
             <!-- Product gallery -->
             <div class="product-view" id="product-view">
-                <h1 class="product-view-title" id="product-view-title">
-                    {{pageTitle}}
-                </h1>
         
-                <div class="flex-container product-grid" id="product-grid" *ngFor="let product of products | category: oper:value">
-                    
-                    <div class="flex-item" id="flex-item">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+                    <div class="col " *ngFor="let product of products | category: oper:value">
                         <app-product-item [product]="product" [image]="findImage(product.pid)"></app-product-item>
-                          
                     </div>
-
                 </div>
-            </div>
+        
+        </div>
+
+
+        </div>
+
+
+
+
+        
     </div>
+
+
+
+
+
+  
+   
 </div>
 
 
